# multiprocess-rpc

./: Cargo.toml  README.md
src/: build.rs  main.rs
src/ipc/capnp/: c++.capnp  chain.capnp  chain_capnp.rs  common.capnp  common_capnp.rs  echo.capnp  echo_capnp.rs  handler.capnp  handler_capnp.rs  init.capnp  init_capnp.rs  mining.capnp  mining_capnp.rs  proxy.capnp  proxy_capnp.rs
