[package]
name = "multiprocess-rpc"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[[bin]]
name = "multiprocess-rpc"
path = "src/main.rs"

[dependencies]
bitcoin = "0.32.5"
capnp = "0.20.3"
capnp-rpc = "0.20.3"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["net", "rt", "macros"] }
tokio-util = { version = "0.7.13", features = ["compat"] }

[build-dependencies]
capnpc = "0.20.1"
